env/raw/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tounis
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: tounis.labs.dev.pocteo.io
      http:
        paths:
          - path: /
            backend:
              serviceName: tounis
              servicePort: 80
